For footer buttons in the "AddRecipe" modal: fixed font sizes, fixed padding at small screens, adjusted breakpoint, and added inline text spacing from design into the "Add Recipe" button.

--- a/styles/modals/add-recipe/buttons/AddRecipeBtn.module.scss
+++ b/styles/modals/add-recipe/buttons/AddRecipeBtn.module.scss
@@ -1,8 +1,18 @@
 .text {
-  padding: 0 3em;
+  font-size: .9rem;
+
+  padding: 0 2.5em;
+  margin: 0;
 }
 
-@media (min-width: 360px) {
+.spacedText {
+  display: inline-block;
+
+  margin-right: .3em;
+}
+
+$footerBtnsBreakpoint: 350px;
+@media (min-width: $footerBtnsBreakpoint) {
   .text {
     padding: 0 3.5em;
   }
