--- a/styles/modals/add-recipe/buttons/CancelBtn.module.scss
+++ b/styles/modals/add-recipe/buttons/CancelBtn.module.scss
@@ -6,5 +6,8 @@
 }
 
 .text {
-  padding: .125em 2.5em;
+  font-size: .9rem;
+
+  padding: 1em 2.5em;
+  margin: 0;
 }
